Fixes clipping issues with collapses and rounded body corners

--- a/scss/_flist_overrides.scss
+++ b/scss/_flist_overrides.scss
@@ -10,7 +10,7 @@ hr {
 .modal-dialog.modal-70 {
   min-width: 70%;
 }
-.card {
+.card:not(.collapsed) {
   border-bottom-right-radius: 1rem;
   border-bottom-left-radius: 1rem;
 }
